Practica con arrays

--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
         </div>
     </footer>
 
+<!-- <script src="./scripts/objects.js"></script> -->
+<script src="./scripts/product.js"></script>
 </body>
 
 </html>
