--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </footer>
     <script src="./scripts/nav.js"></script>
-    <script src="./scripts/product.js"></script>
+    <script src="./scripts/productCard.js"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/copyright.js"></script>
   </body>
