--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               id="buscar"
               name="buscar"
               placeholder="Buscar..."
+              onkeyup="captureText()"
             />
           </form>
         </div>
@@ -66,5 +67,6 @@
     <script src="./scripts/productCard.js"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/copyright.js"></script>
+    <script src="./scripts/filterProducts.js"></script>
   </body>
 </html>
