Se modificó script productCard.js

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda Virtual</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="css/styleIndex.css" />
   </head>
 
   <body>
-    <!---->
+    <!-- -->
     <header>
       <div class="search" href="index.html">
         <div class="logo" href="index.html">
@@ -25,7 +25,6 @@
               id="buscar"
               name="buscar"
               placeholder="Buscar..."
-              onkeyup="captureText()"
             />
           </form>
         </div>
@@ -64,6 +63,7 @@
       </div>
     </footer>
     <script src="./scripts/nav.js"></script>
+    <script src="./scripts/product.js"></script>
     <script src="./scripts/productCard.js"></script>
     <script src="./scripts/footer.js"></script>
     <script src="./scripts/copyright.js"></script>
